# foc_learning_repo

./: .gitattributes  .gitignore  AGENTS.md  AI_CONTEXT.md  CHANGELOG.md  CURRENT_STATUS.md  README.md  ROADMAP.md
.obsidian/: app.json  appearance.json  bookmarks.json  community-plugins.json  core-plugins.json  daily-notes.json  hotkeys.json  templates.json
apps/stm32_g474_foc/cn8_pin_probe/: CMakeLists.txt  CMakePresets.json  README.md
apps/stm32_g474_foc/cn8_pin_probe/Core/Inc/: main.h
apps/stm32_g474_foc/cn8_pin_probe/Core/Src/: main.c
assets/: README.md
deliverables/: 2026-05-12_p1_catchup_pack.md  2026-05-13_p2_mcsdk_no_power_precheck.md  README.md  submission_checklist.md
docs/: AGENTS.md  file_map.md  hardware_risks.md  project_brief.md  protocol.md
experiments/: README.md
interfaces/: esp32_command_frame.md  fault_codes.md  stm32_status_frame.md  uart_protocol.md  uart_protocol.schema.json
learning/: LEARNING_STATUS.md  MASTERY_MAP.md  NEXT_LESSON.md  README.md  question_bank.md  review_queue.md  session_notes.md  weak_points.md
materials/: START_HERE.md  assistant_profile.md  drive_core_notes.md  google_docs_from_share.json  link_69f24b8e_summary.md  link_69f259fc_summary.md  linked_article_rules.md  source_manifest.json
notes/: README.md
references/: datasheet_index.md  do_not_trust_random_sources.md  official_links.md  st_manuals_index.md
retrieval_eval/: queries.json
src/: protocol_model.py  software_hall_model.py
templates/: experiment_record_template.md  internet_verification_template.md  jeoc_interrupt_review_template.md  learning_session_note_template.md  weak_point_card_template.md
tests/: test_ai_architecture_contracts.py  test_learning_tools.py  test_p2_evidence_contract.py  test_protocol_model.py  test_search_local_v2.py  test_software_hall_model.py  test_software_hall_vectors.py  test_workflow_contracts.py
tools/: README.md  ask_local.py  bootstrap_mac_codex.sh  build_context_pack.py  build_vector_store.py  check_ai_contracts.py  create_mac_codex_setup_bundle.ps1  end_learning_session.ps1  end_learning_session.sh  export_mac_codex_bundle.ps1  ingest_st_manuals.py  install_project_skill.ps1  install_project_skill.sh  normalize_learning_loop.py  record_learning_session.py  run_rehearsal.py  scaffold_competition_structure.py  search_local_v2.py  start_learning_session.ps1  start_learning_session.sh  sync_project.ps1  sync_project.sh
vector_store/: index.json
workflow/: ACTIVE_TASK.md  CURRENT_SNAPSHOT.md  ai_review_and_tests.md  algo_b_teaching_delivery_plan.md  automation_playbook.md  chatgpt_generated_artifact_rules.md  codex_dual_teacher_execution_gate.md  current_learning_sprint.md  (+19 more)
(+288 files in other folders)
